# wgpu-dft

./: .gitignore  CMakeLists.txt  README.md  test.py  tests.sh
.github/workflows/: CI.yaml  test.yaml
src/: main.cpp  webgpu_utils.cpp  webgpu_utils.h
src/dft/: dft.cpp  dft.h  dft.wgsl  dft_col.wgsl  dft_row.wgsl
src/fft/: fft.cpp  fft.h  fft_bit_reversal.wgsl  fft_bit_reversal_col.wgsl  fft_butterfly.wgsl  fft_butterfly_col.wgsl  fft_utils.h
tests/: efficiency_test.py  precision_test.py
tests/artifacts/: efficiency_results.csv
